--- a/Pipfile
+++ b/Pipfile
@@ -3,10 +3,20 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://download.pytorch.org/whl/nightly/cpu"
+verify_ssl = true
+name = "downloadpytorch"
+
+[[source]]
+url = "https://download.pytorch.org/whl/nightly/cpu"
+verify_ssl = true
+name = "downloadpytorch"
+
 [packages]
 jupyterlab = "*"
-torch = "*"
-torchvision = "*"
+torch = {version = "*", index = "downloadpytorch"}
+torchvision = {version = "*", index = "downloadpytorch"}
 transformers = "==4.19.2"
 diffusers = "*"
 invisible-watermark = "*"
@@ -15,3 +25,6 @@ invisible-watermark = "*"
 
 [requires]
 python_version = "3.10"
+
+[pipenv]
+allow_prereleases = true
