--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ diffusers = "*"
 invisible-watermark = "*"
 tensorflow-macos = "*"
 tensorflow-metal = "*"
+stable_diffusion_tf = {version = "*", git = "https://github.com/divamgupta/stable-diffusion-tensorflow.git"}
 
 [dev-packages]
 
