--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ invisible-watermark = "*"
 tensorflow-macos = "*"
 tensorflow-metal = "*"
 stable_diffusion_tf = {version = "*", git = "https://github.com/divamgupta/stable-diffusion-tensorflow.git"}
+tensorflow-addons = "*"
 
 [dev-packages]
 
