--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ tensorflow-metal = "*"
 stable_diffusion_tf = {version = "*", git = "https://github.com/divamgupta/stable-diffusion-tensorflow.git"}
 tensorflow-addons = "*"
 ftfy = "*"
+scipy = "*"
 
 [dev-packages]
 
