--- a/Pipfile
+++ b/Pipfile
@@ -3,20 +3,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
-[[source]]
-url = "https://download.pytorch.org/whl/nightly/cpu"
-verify_ssl = true
-name = "downloadpytorch"
-
-[[source]]
-url = "https://download.pytorch.org/whl/nightly/cpu"
-verify_ssl = true
-name = "downloadpytorch"
-
 [packages]
 jupyterlab = "*"
-torch = {version = "*", index = "downloadpytorch"}
-torchvision = {version = "*", index = "downloadpytorch"}
+torch = "*"
+torchvision = "*"
 transformers = "*"
 diffusers = "*"
 invisible-watermark = "*"
@@ -31,6 +21,3 @@ scipy = "*"
 
 [requires]
 python_version = "3.10"
-
-[pipenv]
-allow_prereleases = true
